wip: fix entity publisher margin on mobile, add publisher link

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -105,10 +105,13 @@ html {
 }
 
 .base-sr-last-modified {
-  margin-top: -$spacing;
   color: $font-color-second;
   font-size: $font-size-small;
   line-height: $line-height;
+
+  @media screen and (min-width: $breakpoint-small) {
+    margin-top: -$spacing;
+  }
 }
 
 .base-sr-h1 {
